# gtulu-reference

./: .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.rst  api  generate-header  generate-lists  glBindBuffer.xml  glBindBufferRange.xml  glBindFragDataLocationIndexed.xml  glBindSampler.xml  glBindVertexBuffer.xml  glBlendFunc.xml  glBlitFramebuffer.xml  glBufferData.xml  glBufferSubData.xml  glCheckFramebufferStatus.xml  glClearBuffer.xml  glClearBufferData.xml  glClearBufferSubData.xml  glColorMask.xml  glCompressedTexImage2D.xml  glCopyImageSubData.xml  glCopyTexSubImage1D.xml  glCopyTexSubImage2D.xml  glCopyTexSubImage3D.xml  glCreateShaderProgram.xml  glDebugMessageCallback.xml  glDebugMessageControl.xml  glDebugMessageInsert.xml  glDeleteFramebuffers.xml  glDeleteRenderbuffers.xml  glDeleteSamplers.xml  glDisable.xml  glDispatchCompute.xml  glDispatchComputeIndirect.xml  glDrawArraysInstanced.xml  glDrawElementsBaseVertex.xml  glDrawElementsInstanced.xml  (+85 more)
constant/: GL_2D  GL_2_BYTES  GL_3D  GL_3D_COLOR  GL_3D_COLOR_TEXTURE  GL_3_BYTES  GL_4D_COLOR_TEXTURE  GL_4_BYTES  GL_ACCUM  GL_ACCUM_ALPHA_BITS  GL_ACCUM_BLUE_BITS  GL_ACCUM_BUFFER_BIT  GL_ACCUM_CLEAR_VALUE  GL_ACCUM_GREEN_BITS  GL_ACCUM_RED_BITS  GL_ACTIVE_ATOMIC_COUNTER_BUFFERS  GL_ACTIVE_ATTRIBUTES  GL_ACTIVE_ATTRIBUTE_MAX_LENGTH  GL_ACTIVE_PROGRAM  GL_ACTIVE_RESOURCES  GL_ACTIVE_SUBROUTINES  GL_ACTIVE_SUBROUTINE_MAX_LENGTH  GL_ACTIVE_SUBROUTINE_UNIFORMS  GL_ACTIVE_SUBROUTINE_UNIFORM_LOCATIONS  GL_ACTIVE_SUBROUTINE_UNIFORM_MAX_LENGTH  GL_ACTIVE_TEXTURE  GL_ACTIVE_UNIFORMS  GL_ACTIVE_UNIFORM_BLOCKS  GL_ACTIVE_UNIFORM_BLOCK_MAX_NAME_LENGTH  GL_ACTIVE_UNIFORM_MAX_LENGTH  GL_ACTIVE_VARIABLES  GL_ADD  GL_ADD_SIGNED  GL_ALIASED_LINE_WIDTH_RANGE  GL_ALIASED_POINT_SIZE_RANGE  GL_ALL_ATTRIB_BITS  GL_ALL_BARRIER_BITS  GL_ALL_SHADER_BITS  GL_ALPHA  GL_ALPHA12  (+1626 more)
egl/1.4/: api
egl/1.4/constant/: EGL_ALPHA_FORMAT  EGL_ALPHA_FORMAT_NONPRE  EGL_ALPHA_FORMAT_PRE  EGL_ALPHA_MASK_SIZE  EGL_ALPHA_SIZE  EGL_BACK_BUFFER  EGL_BAD_ACCESS  EGL_BAD_ALLOC  EGL_BAD_ATTRIBUTE  EGL_BAD_CONFIG  EGL_BAD_CONTEXT  EGL_BAD_CURRENT_SURFACE  EGL_BAD_DISPLAY  EGL_BAD_MATCH  EGL_BAD_NATIVE_PIXMAP  EGL_BAD_NATIVE_WINDOW  EGL_BAD_PARAMETER  EGL_BAD_SURFACE  EGL_BIND_TO_TEXTURE_RGB  EGL_BIND_TO_TEXTURE_RGBA  EGL_BLUE_SIZE  EGL_BUFFER_DESTROYED  EGL_BUFFER_PRESERVED  EGL_BUFFER_SIZE  EGL_CLIENT_APIS  EGL_COLORSPACE  EGL_COLORSPACE_LINEAR  EGL_COLORSPACE_sRGB  EGL_COLOR_BUFFER_TYPE  EGL_CONFIG_CAVEAT  EGL_CONFIG_ID  EGL_CONFORMANT  EGL_CONTEXT_CLIENT_TYPE  EGL_CONTEXT_CLIENT_VERSION  EGL_CONTEXT_LOST  EGL_CORE_NATIVE_ENGINE  EGL_D3D_TEXTURE_2D_SHARE_HANDLE_ANGLE  EGL_DEFAULT_DISPLAY  EGL_DEPTH_SIZE  EGL_DISPLAY_SCALING  (+88 more)
egl/1.4/function/: eglBindAPI  eglBindTexImage  eglChooseConfig  eglCopyBuffers  eglCreateContext  eglCreatePbufferFromClientBuffer  eglCreatePbufferSurface  eglCreatePixmapSurface  eglCreateWindowSurface  eglDestroyContext  eglDestroySurface  eglGetConfigAttrib  eglGetConfigs  eglGetCurrentContext  eglGetCurrentDisplay  eglGetCurrentSurface  eglGetDisplay  eglGetError  eglGetProcAddress  eglInitialize  eglMakeCurrent  eglQueryAPI  eglQueryContext  eglQueryString  eglQuerySurface  eglReleaseTexImage  eglReleaseThread  eglSurfaceAttrib  eglSwapBuffers  eglSwapInterval  eglTerminate  eglWaitClient  eglWaitGL  eglWaitNative
function/: glAccum  glActiveShaderProgram  glActiveTexture  glAlphaFunc  glAreTexturesResident  glArrayElement  glAttachShader  glBegin  glBeginConditionalRender  glBeginQuery  glBeginQueryIndexed  glBeginTransformFeedback  glBindAttribLocation  glBindBuffer  glBindBufferBase  glBindBufferRange  glBindFragDataLocation  glBindFragDataLocationIndexed  glBindFramebuffer  glBindImageTexture  glBindProgramPipeline  glBindRenderbuffer  glBindSampler  glBindTexture  glBindTransformFeedback  glBindVertexArray  glBindVertexBuffer  glBitmap  glBlendColor  glBlendEquation  glBlendEquationSeparate  glBlendEquationSeparatei  glBlendEquationi  glBlendFunc  glBlendFuncSeparate  glBlendFuncSeparatei  glBlendFunci  glBlitFramebuffer  glBufferData  glBufferSubData  (+871 more)
share/egl/spec/: glenum.spec
src/: CMakeLists.txt  api.tcpp  api.thpp  api_ni.tcpp
src/gtulu/: api.tcpp  api.thpp  api_ni.tcpp  error.cpp  error.hpp  logging.cpp  logging.hpp  notimp.cpp  notimp.hpp  ostream.hpp  types.h  types.hpp
src/gtulu/types/: buffer_ref.hpp  literals.hpp  objects.hpp  tagged_value.hpp  vectors.hpp
test/: test1.cpp
